@@ -1,3 +1,10 @@
+2008-02-24  Darin Adler  <darin@apple.com>
+
+        - another try at fixing the build
+
+        * Api/qwebframe.cpp:
+        (QWebFrame::load): Replace new FormData with FormData::create.
+
 2008-02-22  Sam Weinig  <sam@webkit.org>
 
         Fix Qt build.
